fixed button alignment and added transition for background

--- a/src/app/styles/core.scss
+++ b/src/app/styles/core.scss
@@ -21,6 +21,7 @@ html, body {
 
 .highlighted-word{
   background-color: grey;
+  transition: background-color 0.2s ease;
   @extend .px-1 !optional;
   @extend .py-1 !optional;
 }
